added index switch and main menu page

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\PhpProject1
 index.file=index.php
 run.as=LOCAL
-url=http://localhost:8012/PhpProject3/
+url=http://localhost/PhpProject3/index.php/
