--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-browser.id=SL[/Browsers/MicrosoftEdgeBrowser
+browser.id=default
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\PhpProject1
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/PhpProject3/
+url=http://localhost:8012/PhpProject3/
